# rustgames

./: Cargo.toml  README.md  copy_ssh_key_from_i9.sh  implementation_plan.md  push_to_github.sh  qwencopilot.sh  setup_cbios.sh  setup_msx_dev.sh
.antigravitycli/: 898d3d76-1e1d-43f9-acf8-1407da9b3287.json
cbios-0.29/derived/asm/: version.asm
cbios-0.29/derived/dep/: basic.dep  basic_tables.dep  chput.dep  debug.dep  disk.dep  font.dep  font_br.dep  font_jp.dep  font_us.dep  hardware.dep  hooks.dep  inlin.dep  locale.dep  logo.dep  logo_msx1.dep  logo_msx2+.dep  logo_msx2.dep  main.dep  main_msx1.dep  main_msx1_br.dep  main_msx1_eu.dep  main_msx1_jp.dep  main_msx2+.dep  main_msx2+_br.dep  main_msx2+_eu.dep  main_msx2+_jp.dep  main_msx2.dep  main_msx2_br.dep  main_msx2_eu.dep  main_msx2_jp.dep  music.dep  scancodes_de.dep  scancodes_fr.dep  scancodes_jp.dep  scancodes_uk.dep  scancodes_us.dep  slot.dep  statements.dep  sub.dep  systemvars.dep  (+3 more)
cbios-0.29/derived/lst/: cbios_basic.lst  cbios_disk.lst  cbios_logo_msx1.lst  cbios_logo_msx2+.lst  cbios_logo_msx2.lst  cbios_main_msx1.lst  cbios_main_msx1_br.lst  cbios_main_msx1_eu.lst  cbios_main_msx1_jp.lst  cbios_main_msx2+.lst  cbios_main_msx2+_br.lst  cbios_main_msx2+_eu.lst  cbios_main_msx2+_jp.lst  cbios_main_msx2.lst  cbios_main_msx2_br.lst  cbios_main_msx2_eu.lst  cbios_main_msx2_jp.lst  cbios_music.lst  cbios_sub.lst
cbios-0.29/src/: main.asm
docs/: README.md  engine.js  index.md
docs/api/: index.md
docs/examples/: index.md
docs/guides/: index.md
docs/play/: game.html  index.html  maze.html
docs/play/animal-puzzle/: index.html
docs/play/animal-puzzle/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/blaster3d/: index.html  style.css
docs/play/blaster3d/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/earthdef/: index.html  style.css
docs/play/earthdef/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/game/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/maze/: package.json  wasm_app.js  wasm_app_bg.wasm
docs/play/maze3d/: index.html  style.css
docs/play/maze3d/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/msx/: fetch_cbios.sh  index.html  lineboy.rom  shooter.rom  wasm_app_bg.wasm
docs/play/msx/cbios/: README.md  cbios_main_msx1.rom.modified
docs/play/msx/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/pacman/: index.html
docs/play/pacman/wasm/: wasm_app.d.ts  wasm_app.js  wasm_app_bg.wasm  wasm_app_bg.wasm.d.ts
docs/play/penpen/: demo.html  index.html
docs/play/penpen/wasm/: penpen_wasm.js  penpen_wasm_bg.wasm.d.ts  wasm_app_bg.wasm
docs/play/penpen2/: index.html  style.css
docs/play/penpen2/wasm/: penpen_wasm.d.ts  penpen_wasm_bg.wasm  wasm_app_bg.wasm
docs/play/roguelike/: GAME_DESIGN.md  index.html  index.html.bak
docs/play/roguelike/wasm/: .gitignore  package.json  wasm_roguelike.d.ts  wasm_roguelike.js  wasm_roguelike_bg.wasm  wasm_roguelike_bg.wasm.d.ts
docs/setup/: index.md
engine/: Cargo.toml
engine/src/: input.rs  lib.rs  math.rs  renderer.rs  scene.rs  types.rs
engine/src/graphics/: mesh.rs  mod.rs  shader.rs
ffi_bridge/: Cargo.toml
ffi_bridge/src/: lib.rs
game_logic/: Cargo.toml
game_logic/src/: lib.rs  particle.rs  physics.rs  puzzle.rs
games/lineboy/: Makefile  lineboy.asm  lineboy.rom
games/shooter/: shooter.asm  shooter.rom
log/admin/: operation_log.md
native_app/: Cargo.toml
native_app/src/: main.rs
penpen_wasm/: Cargo.toml
penpen_wasm/src/: audio.rs  camera.rs  gpu.rs  input.rs  lib.rs  math.rs  particle.rs  penpen2.rs  scene.rs  theme.rs
wasm_app/: Cargo.toml
wasm_app/src/: animal_puzzle.rs  audio.rs  audio_tool.rs  constants.rs  enemy.rs  engine.rs  font.rs  game.rs  geometry.rs  gpu.rs  lib.rs  maze.rs  penpen.rs  shader.rs  storage.rs  vrm.rs
wasm_app/src/blaster/: audio_defs.rs  boss.rs  bullet.rs  camera_mode.rs  enemy.rs  geometry.rs  mod.rs  state.rs
wasm_app/src/earthdef/: geometry.rs  mod.rs  state.rs
wasm_app/src/msx/: keyboard.rs  memory.rs  mod.rs  ppi.rs  psg.rs  vdp.rs  z80.rs
wasm_app/src/pacman/: ghost.rs  map.rs  mod.rs  player.rs
wasm_roguelike/: Cargo.toml
wasm_roguelike/src/: lib.rs  state.rs
