[workspace]
members = ["engine", "ffi_bridge", "game_logic", "native_app", "wasm_app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Game Developer"]

[workspace.dependencies]
# Graphics & Rendering
wgpu = "0.19"
wgpu-core = "0.19"
wgpu-hal = "0.19"

# Window & Events
winit = "0.29"
raw-window-handle = "0.5"

# Math & Geometry
cgmath = "0.18"
glam = { version = "0.25", features = ["serde"] }

# Async runtime
pollster = "0.3"
tokio = { version = "1", features = ["full"] }

# WASM Support
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "console",
] }
js-sys = "0.3"

# UI (egui for simplicity)
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
