[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wgpu = { workspace = true }
wgpu-core = { workspace = true }
cgmath = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
raw-window-handle = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
