[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wgpu = { workspace = true }
cgmath = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu-core = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-futures = "0.4"
