[package]
name = "ffi_bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
engine = { path = "../engine" }
game_logic = { path = "../game_logic" }
cgmath = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
log = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
