[package]
name = "wasm_app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# フォントをWASMバイナリに埋め込む（日本語表示を自己完結で保証）
# ビルド: wasm-pack build -- --features embed-font
# バイナリサイズが約+6MB増加する点に注意
embed-font = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[dependencies.wgpu]
version = "0.19"
default-features = false
features = ["webgl", "wgsl"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Storage",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
